Added dark theme and large text class toggle

--- a/main.css
+++ b/main.css
@@ -59,3 +59,16 @@ Message Output Styling
   border: 2px solid black;
   margin: auto;
 }
+ /****************************
+Message Output Styling
+****************************/
+
+.darkTheme{
+  background-color: darkgray;
+  color: white;
+}
+
+.largeText{
+  font-size: 40px;
+}
+}
