--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 sets margin and padding to 0  */
 
 body {
+  font-family:Futura,sans-serif ;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -28,6 +29,9 @@ NAV Bar Styling
   padding-top: 2vh;
   /*position: absolute;*/
 }
+.msgBox{
+  padding: 5px;
+}
 
 #messageBar {
   height: 5vh;
@@ -35,8 +39,8 @@ NAV Bar Styling
 }
 
 #deleteMssgsBtn {
-  width: 20%;
-  border-radius: 20%;
+  width: 25%;
+  border-radius: 5%;
 }
 
 .inputMessage {
@@ -44,8 +48,11 @@ NAV Bar Styling
 }
 
 .chatty-logo {
-  font-size: 25px;
-  width: 10%;
+  font-family: Impact, sans-serif;
+  font-size: 35px;
+  width: 40%;
+  color: #E83600;
+  text-align: center;
 }
 
 
@@ -54,10 +61,12 @@ Message Output Styling
 ****************************/
 
 #outputMessage {
+  font-family: Futura, sans-serif;
   width: 90%;
   height: 60%;
   border: 2px solid black;
   margin: auto;
+  padding: 10px;
 }
  /****************************
 Message Output Styling
@@ -69,6 +78,8 @@ Message Output Styling
 }
 
 .largeText{
-  font-size: 40px;
+  font-size: 30px;
 }
-}
+
+
+
