--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #85CCFF;
-  
+
 }
 
 p {
@@ -31,10 +31,11 @@ NAV Bar Styling
   padding-top: 2vh;
 }
 
-
 #messageBar {
   height: 5vh;
   padding: 0 1vh;
+  width:90%;
+  margin-left:10%;
 }
 
 #deleteMssgsBtn {
@@ -53,11 +54,16 @@ NAV Bar Styling
 
 .chatty-logo {
   font-family: KiloGram, sans-serif;
+  display:inline;
   font-size: 30px;
   width: 40%;
   color: #185AFF;
- 
-  
+}
+
+.nav-bar-fix {
+  margin-bottom: 3rem;
+  display: block;
+  width: 100%;
 }
 
 
@@ -80,7 +86,7 @@ Message Output Styling
 
 
  /****************************
-Message Output Styling
+Message App Styling
 ****************************/
 
 .darkTheme{
@@ -103,20 +109,3 @@ Message Output Styling
   width:100%;
   margin-left:10%;
 }
-
-#messageBar{
-  width:90%;
-  margin-left:10%;
-}
-.chatty-logo  {
-  display:inline;
-}
-
-/.nav-bar-fix {
-  margin-bottom: 3rem;
-  display: block;
-  width: 100%;
-}
-
-
-
