--- a/main.css
+++ b/main.css
@@ -58,6 +58,7 @@ Message Output Styling
 
 
 #outputMessage {
+  z-index:0;
   width: 90%;
   height: 60%;
   border: 2px solid black;
@@ -105,4 +106,57 @@ Message Output Styling
 
 .nav-bar-fix {
   margin-top: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*****************
+Modal classes
+*****************/
+.colorModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left:0;
+    top:0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modalContent {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 15%; /* Could be more or less, depending on screen size */
+}
+.modalContent input{
+    display:block;
+}
+.modalContent input[type="button"]{
+  display:inline-block;
+}
+.visible{
+  display:block;
 }
