--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ NAV Bar Styling
 ****************************/
 
 #container {
+  z-index:2;
   display: flex;
   flex-direction: row;
   flex-flow: row wrap;
