--- a/main.css
+++ b/main.css
@@ -170,8 +170,76 @@ Modal classes
   display:block;
 }
 
-
 .error {
   background-color: rgba(255, 0, 0, 0.5);
   color: white;
+}
+
+/**********************************
+Classes for max message message
+**********************************/
+
+.maxMessages {
+  z-index: 1;
+  position: fixed;
+  top: -10%;
+  right: 35%;
+  border: solid 2px red;
+  background: rgba(0, 0, 0, 0.8);
+  color: red;
+}
+
+.maxMessages p {
+  margin: 2rem;
+}
+
+.hide {
+  display: none;
+}
+
+.maxMessagesAn {
+  animation: max-messages 3s 0s 1 ease-in forwards;
+}
+
+@keyframes max-messages {
+
+  0% {
+    margin-top: -5%;
+  }
+  10% {
+    margin-top: 0%;
+    transform: rotateY(90deg);
+  }
+  20% {
+    margin-top: 5%;
+    transform: rotateY(180deg);
+  }
+  30% {
+    margin-top: 10%;
+    transform: rotateY(270deg);
+  }
+  40% {
+    margin-top: 15%;
+    transform: rotateY(270deg);
+  }
+  50% {
+    margin-top: 20%;
+    transform: rotateY(270deg);
+  }
+  60% {
+    margin-top: 25%;
+  }
+  70% {
+    margin-top: 30%;
+  }
+  80% {
+    margin-top: 30%;
+  }
+  90% {
+    margin-top: 30%;
+  }
+  100% {
+    margin-top: 35%;
+  }
+
 }
